# galaxy-engine

./: .clang-format  .gitattributes  .gitignore  .gproj  CMakeLists.txt  README  README.md  TEST.glx
cmake/: gen_launch.cmake
galaxy-engine/: CMakeLists.txt
galaxy-engine/shaders/: base.glsl  compute_octahedral.glsl  fragment.glsl  post_processing.glsl  shadow_depth.glsl  skybox.glsl  ssgi.glsl  test.glsl  texture.glsl  unicolor.glsl  vertex.glsl
galaxy-engine/shaders/debug/: line_draw.glsl
galaxy-engine/shaders/filters/: irradiance.glsl
galaxy-engine/shaders/include/: debug.glsl  octahedral.glsl  random.glsl  utils.glsl
galaxy-engine/src/: Engine.hpp
galaxy-engine/src/engine/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Layer.hpp  LayerStack.hpp  Log.cpp  Log.hpp  Window.hpp  gl_headers.hpp  helper.hpp  pch.hpp
galaxy-engine/src/engine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
galaxy-engine/src/engine/common/: Util.hpp  YamlTranslation.cpp  YamlTranslation.hpp
galaxy-engine/src/engine/common/geometry/: Shapes.hpp
galaxy-engine/src/engine/core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Helper.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  Log.cpp  ThreadPool.hpp  TimeLogger.cpp  TimeLogger.hpp  Window.hpp  pch.hpp
galaxy-engine/src/engine/data/: Camera.hpp  Transform.cpp  Transform.hpp
galaxy-engine/src/engine/event/: Action.cpp  Action.hpp  ActionEvent.hpp  ActionManager.cpp  ActionManager.hpp  Event.cpp  Event.hpp  InputManager.cpp  InputManager.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
galaxy-engine/src/engine/input/: Action.cpp  Action.hpp  ActionManager.cpp  ActionManager.hpp  Input.cpp  Input.hpp  InputManager.cpp  InputManager.hpp
galaxy-engine/src/engine/nodes/: Node.cpp  Node.hpp  Node3D.cpp  Node3D.hpp  NodeHelper.cpp  NodeHelper.hpp  Root.cpp  Root.hpp  Scene.cpp  Scene.hpp  Serializer.cpp  Serializer.hpp
galaxy-engine/src/engine/nodes/rendering/: Camera.cpp  Camera.hpp  CameraNode.cpp  CameraNode.hpp  CornellBox.cpp  CornellBox.hpp  EnvironmentNode.cpp  EnvironmentNode.hpp  MeshInstance.cpp  MeshInstance.hpp  MultiMeshInstance.cpp  MultiMeshInstance.hpp  SpotLight.cpp  SpotLight.hpp  Sprite3D.cpp  Sprite3D.hpp
galaxy-engine/src/engine/nodes/rendering/lighting/: GINode.cpp  GINode.hpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
galaxy-engine/src/engine/nodes/visitors/: Deserializer.cpp  Deserializer.hpp  NodeVisitor.hpp  Serializer.cpp  Serializer.hpp
galaxy-engine/src/engine/project/: Project.cpp  Project.hpp  Scene.cpp  Scene.hpp  UUID.cpp  UUID.hpp  uuid.cpp  uuid.hpp
galaxy-engine/src/engine/rendering/: CameraManager.cpp  CameraManager.hpp  OpenglHelper.cpp  OpenglHelper.hpp  Program.cpp  Program.hpp
galaxy-engine/src/engine/rendering/GPUInstances/: DebugLines.cpp  DebugLines.hpp  FrameBuffer.cpp  FrameBuffer.hpp  MaterialInstance.hpp  Texture.cpp  Texture.hpp  UBOInstance.cpp  UBOInstance.hpp  VisualInstance.cpp  VisualInstance.hpp
galaxy-engine/src/engine/rendering/renderer/: Backend.cpp  Backend.hpp  Frontend.cpp  Frontend.hpp  LightManager.cpp  LightManager.hpp  RenderCanva.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp
galaxy-engine/src/engine/rendering/renderer/frontend/: Frontend.cpp  Frontend.hpp  Frustum.hpp  RenderDevice.hpp  SceneContext.cpp  SceneContext.hpp
galaxy-engine/src/engine/resource/: Environment.cpp  Environment.hpp  Image.cpp  Image.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Resource.hpp  ResourceDeserializer.cpp  ResourceDeserializer.hpp  ResourceHandle.hpp  ResourceImporter.hpp  ResourceMaker.hpp  ResourceManager.hpp  ResourceSerializer.cpp  ResourceSerializer.hpp  Texture.cpp  Texture.hpp
galaxy-engine/src/engine/sections/rendering/: Backend.cpp  Backend.hpp  CameraManager.cpp  CameraManager.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Frontend.hpp  OpenglHelper.cpp  OpenglHelper.hpp  Program.cpp  Program.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  VisualInstance.cpp  VisualInstance.hpp
galaxy-engine/src/engine/types/: Math.hpp  Render.hpp  uuid.hpp
galaxy-engine/src/platform/linux/: LinuxWindow.cpp  LinuxWindow.hpp
project/: .gproj  CornellBox-Empty-CO.gres  CornellBox-Empty-CO_material_1.gres  CornellBox-Empty-CO_material_2.gres  CornellBox-Empty-CO_material_5.gres  CornellBox-Empty-CO_material_6.gres  Cube_BaseColor.gres  Cube_MetallicRoughness.gres  FlightHelmet.gres  FlightHelmet_Materials_GlassPlasticMat_BaseColor.gres  FlightHelmet_Materials_GlassPlasticMat_Normal.gres  FlightHelmet_Materials_LeatherPartsMat_BaseColor.gres  FlightHelmet_Materials_LensesMat_Normal.gres  FlightHelmet_Materials_MetalPartsMat_BaseColor.gres  FlightHelmet_Materials_RubberWoodMat_BaseColor.gres  FlightHelmet_Materials_RubberWoodMat_Normal.gres  FlightHelmet_material_0.gres  FlightHelmet_material_1.gres  FlightHelmet_material_2.gres  FlightHelmet_material_3.gres  FlightHelmet_material_4.gres  FlightHelmet_material_5.gres  MainScene  env.gres
project/FlightHelmet/: FlightHelmet.gres  FlightHelmet_Materials_LeatherPartsMat_Normal.gres  FlightHelmet_Materials_LensesMat_BaseColor.gres  FlightHelmet_Materials_MetalPartsMat_Normal.gres  FlightHelmet_material_0.gres  FlightHelmet_material_1.gres  FlightHelmet_material_2.gres  FlightHelmet_material_3.gres  FlightHelmet_material_4.gres  FlightHelmet_material_5.gres
project/lucy/: lucy.gres  lucy_material_0.gres
project/skybox/: back.gres  bot.gres  front.gres  left.gres  right.gres  top.gres
project/sponza/: NewSponza_Main_glTF_003.gres  NewSponza_Main_glTF_003.max  NewSponza_Main_glTF_003_material_0.gres  NewSponza_Main_glTF_003_material_1.gres  NewSponza_Main_glTF_003_material_10.gres  NewSponza_Main_glTF_003_material_11.gres  NewSponza_Main_glTF_003_material_12.gres  NewSponza_Main_glTF_003_material_13.gres  NewSponza_Main_glTF_003_material_14.gres  NewSponza_Main_glTF_003_material_15.gres  sponza.gres  (+45 more)
sandbox/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.hpp  main.cpp
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  pch.hpp
(+126 files in other folders)
